crates/lk-cli/tests/snapshots/behaviour__schema.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
--- stderr ---
Wrote <staged>/corpus/vault/wiki/AGENTS.md
