crates/lk-cli/tests/snapshots/behaviour__status.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
--- stderr ---
lore <version>  <staged>/corpus/vault
  ! install  1 deployed copy differs                     lore schema
  · board    1 committed · 1 carried too long            lore agenda
  · sources  0 fresh                                     lore health
  · queue    drained                                     /lore-process
  · pages    5 clean                                     lore doctor
  ! graph    5 contradiction(s)                          lore graph lint
