crates/lk-cli/tests/snapshots/behaviour__wiki_index.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
--- stderr ---
Wrote <staged>/corpus/vault/wiki/index.md
